--- a/views/addProducts.html
+++ b/views/addProducts.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="#">Mohammed Bin Obaid Abilail.Company</span>
+          <span class="navbar-brand" href="#">Shaheid Malik</span>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
