--- a/views/index.html
+++ b/views/index.html
@@ -46,7 +46,7 @@
         
         <section class="main col-md-9">
           <article>
-          <h2>Product Features</h2>
+          <h2>About</h2>
           <p>
             My name is Shaheid Malik. I amm the student of computer programming. 
           </p>
