--- a/views/addProducts.html
+++ b/views/addProducts.html
@@ -87,8 +87,8 @@
                                 <option value="2">Machine Learning</option>
                                 <option value="3">Big Data</option>
                                 <option value="4">Cloud</option>
-                                <option value="5">DevOps</option>
-                                <option value="6">Blockchain</option>
+                                <option value="5">AI</option>
+                                <option value="6">Web Programming</option>
              
                               </select> 
                           </div>
