--- a/views/addProducts.html
+++ b/views/addProducts.html
@@ -83,7 +83,7 @@
                           <div class="form-group">
                               <label for="category">Category:</label>
                               <select class="form-control" name="category" id="category">
-                                <option value="1">Full Stack</option>
+                                <option value="1">C++ programming</option>
                                 <option value="2">Machine Learning</option>
                                 <option value="3">Big Data</option>
                                 <option value="4">Cloud</option>
